@@ -1,4 +1,4 @@
-$Id: History,v 1.118 2001-05-21 14:08:09 johna Exp $
+$Id: History,v 1.119 2001-05-22 12:16:52 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+22nd May 2001 John Allison
+- Refined ASCIITree.
 
 21st May 2001 John Allison (vis-V03-01-02)
 - Minor bug corrections (mostly to fix things that used to work with the
